add swagger transport to handler tender
